--- a/Halloapp/ar.lproj/Localizable.strings
+++ b/Halloapp/ar.lproj/Localizable.strings
@@ -1583,14 +1583,6 @@
 /* Header when selecting destinations to forward a message, this header appears above the feeds section */
 "post.privacy.header.frequentlyContacted" = "يتكرر الاتصال بها";
 
-/* Header when selecting a group to share with
-   Header when selecting destinations to forward a message, this header appears above the groups section */
-"post.privacy.header.groups" = "مجموعاتك";
-
-/* Controller title for changing destination and privacy
-   Header when selecting contacts to share with */
-"post.privacy.title" = "جهات الاتصال";
-
 /* Settings > Privacy: Title for the list of blocked contact and also setting menu item. */
 "privacy.list.blocked" = "محظورة";
 
@@ -2080,8 +2072,7 @@
 /* Title for the screen with information about who saw your moment. */
 "title.your.moment" = "شاهَدَها";
 
-/* Title for the screen with information about who reacted to your post.
-   Title for the screen with information about who saw your post. */
+/* Title for the screen with information about who saw your post. */
 "title.your.post" = "شاهَدَه";
 
 /* Text on the bottom sheet's button that dismisses the sheet. */
