--- a/Halloapp/fa.lproj/Localizable.strings
+++ b/Halloapp/fa.lproj/Localizable.strings
@@ -1667,14 +1667,6 @@
 /* Header when selecting destinations to forward a message, this header appears above the feeds section */
 "post.privacy.header.frequentlyContacted" = "مخاطبین مکرر";
 
-/* Header when selecting a group to share with
-   Header when selecting destinations to forward a message, this header appears above the groups section */
-"post.privacy.header.groups" = "به اشتراک گذاشتن فقط با یک گروه";
-
-/* Controller title for changing destination and privacy
-   Header when selecting contacts to share with */
-"post.privacy.title" = "به اشتراک گذاشتن با...";
-
 /* Settings > Privacy: Title for the list of blocked contact and also setting menu item. */
 "privacy.list.blocked" = "مسدود شده‌ها";
 
@@ -2164,8 +2156,7 @@
 /* Title for the screen with information about who saw your moment. */
 "title.your.moment" = "دیده شد توسط";
 
-/* Title for the screen with information about who reacted to your post.
-   Title for the screen with information about who saw your post. */
+/* Title for the screen with information about who saw your post. */
 "title.your.post" = "دیده شد توسط";
 
 /* Text on the bottom sheet's button that dismisses the sheet. */
