--- a/Halloapp/fr.lproj/Localizable.stringsdict
+++ b/Halloapp/fr.lproj/Localizable.stringsdict
@@ -34,6 +34,70 @@
 			<string>Partager avec %d de mes contacts</string>
 		</dict>
 	</dict>
+	<key>feed.collapsed.n.users.added</key>
+	<dict>
+		<key>NSStringLocalizedFormatKey</key>
+		<string>%#@n_users@</string>
+		<key>n_users</key>
+		<dict>
+			<key>NSStringFormatSpecTypeKey</key>
+			<string>NSStringPluralRuleType</string>
+			<key>NSStringFormatValueTypeKey</key>
+			<string>d</string>
+			<key>one</key>
+			<string>%d person was added</string>
+			<key>other</key>
+			<string>%d people were added</string>
+		</dict>
+	</dict>
+	<key>feed.collapsed.n.users.joined</key>
+	<dict>
+		<key>NSStringLocalizedFormatKey</key>
+		<string>%#@n_users@</string>
+		<key>n_users</key>
+		<dict>
+			<key>NSStringFormatSpecTypeKey</key>
+			<string>NSStringPluralRuleType</string>
+			<key>NSStringFormatValueTypeKey</key>
+			<string>d</string>
+			<key>one</key>
+			<string>%d person joined</string>
+			<key>other</key>
+			<string>%d people joined</string>
+		</dict>
+	</dict>
+	<key>feed.collapsed.n.users.left</key>
+	<dict>
+		<key>NSStringLocalizedFormatKey</key>
+		<string>%#@n_users@</string>
+		<key>n_users</key>
+		<dict>
+			<key>NSStringFormatSpecTypeKey</key>
+			<string>NSStringPluralRuleType</string>
+			<key>NSStringFormatValueTypeKey</key>
+			<string>d</string>
+			<key>one</key>
+			<string>%d person left</string>
+			<key>other</key>
+			<string>%d people left</string>
+		</dict>
+	</dict>
+	<key>feed.collapsed.n.users.removed</key>
+	<dict>
+		<key>NSStringLocalizedFormatKey</key>
+		<string>%#@n_users@</string>
+		<key>n_users</key>
+		<dict>
+			<key>NSStringFormatSpecTypeKey</key>
+			<string>NSStringPluralRuleType</string>
+			<key>NSStringFormatValueTypeKey</key>
+			<string>d</string>
+			<key>one</key>
+			<string>%d person was removed</string>
+			<key>other</key>
+			<string>%d people were removed</string>
+		</dict>
+	</dict>
 	<key>feed.privacy.value.n.contacts.excluded</key>
 	<dict>
 		<key>NSStringLocalizedFormatKey</key>
