--- a/Halloapp/pl.lproj/Localizable.strings
+++ b/Halloapp/pl.lproj/Localizable.strings
@@ -1207,14 +1207,6 @@
 /* Header when selecting all or some contacts to share with */
 "post.privacy.header.contacts" = "Kto zobaczy ten post";
 
-/* Header when selecting a group to share with
-   Header when selecting destinations to forward a message, this header appears above the groups section */
-"post.privacy.header.groups" = "Udostępnij tylko grupie";
-
-/* Controller title for changing destination and privacy
-   Header when selecting contacts to share with */
-"post.privacy.title" = "Udostępnij...";
-
 /* Settings > Privacy: Title for the list of blocked contact and also setting menu item. */
 "privacy.list.blocked" = "Zablokowani";
 
@@ -1632,8 +1624,7 @@
 /* Row in Settings screen */
 "title.storage" = "Pamięć";
 
-/* Title for the screen with information about who reacted to your post.
-   Title for the screen with information about who saw your post. */
+/* Title for the screen with information about who saw your post. */
 "title.your.post" = "Widziany przez";
 
 /* Indicates which switch a user needs to turn on to enable contacts permissions. */
